# aoc2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
solutions/: 1.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  18.ipynb  19.ipynb  2.ipynb  22.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb
src/aoc2024/: __init__.py  utils.py
