[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Szymon Woźniak", email = "swozniak6@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aoc2024"]
